--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   <meta name="msapplication-starturl" content="https://hinpc.com"/>
   <meta name="renderer" content="webkit"/>
   <link rel="shortcut icon" type="image/x-ico" href="./dist/img/hi-logo-with-bg.v17.8.png"/>
-  <link rel="stylesheet" href="./dist/css/main-66c13ae929.css">
+  <link rel="stylesheet" href="./dist/css/main.css">
 </head>
 <body>
   <div class="content">
@@ -38,6 +38,6 @@
   </div>
   <div class="bg-wrap"></div>
 
-  <script src="./dist/js/main-6ca326fea7.js"></script>
+  <script src="./dist/js/main.js"></script>
 </body>
 </html>
