add baidu tongji

--- a/index.html
+++ b/index.html
@@ -39,5 +39,14 @@
   <div class="bg-wrap"></div>
 
   <script src="./asserts/js/main.js"></script>
+  <script>
+    var _hmt = _hmt || [];
+    (function() {
+      var hm = document.createElement("script");
+      hm.src = "https://hm.baidu.com/hm.js?d746c8559f0fadb1401723e8606ea2fe";
+      var s = document.getElementsByTagName("script")[0];
+      s.parentNode.insertBefore(hm, s);
+    })();
+  </script>
 </body>
 </html>
